# bot

bot/: replit.md
bot/tender-bid/: replit.md
bot/tender-bid/babu-4/: pyproject.toml  replit.md
bot/tender-bid/babu-4/SecureTender/: actms.db
bot/tender-bid/babu-4/SecureTender/data/: faqs.json
bot/tender-bid/babu-4/SecureTender/models/: text_vectorizer.pkl
bot/tender-bid/babu-4/SecureTender/services/: ml_service.py  nlp_service.py
bot/tender-bid/babu-4/SecureTender/static/: index.html
bot/tender-bid/babu-4/SecureTender/utils/: file_handler.py
tender-bid/: README.md
tender-bid/babu-4/SecureTender/: actms.db  api_server.py  app.py  pyproject.toml  replit.md  start_app.sh
tender-bid/babu-4/SecureTender/attached_assets/: Pasted--ACTMS-Python-Replit-Setup-Prompt-1-Install-required-packages-pip-install-flask-pandas-scik-1757663791157_1757663791158.txt
tender-bid/babu-4/SecureTender/database/: db_manager.py
tender-bid/babu-4/SecureTender/models/: isolation_forest.pkl  scaler.pkl
tender-bid/babu-4/SecureTender/pages/: 1_📋_Tender_Management.py  2_📝_Bid_Submission.py  3_🔍_AI_Analysis.py  4_💬_Chatbot.py  5_📊_Dashboard.py
tender-bid/babu-4/SecureTender/services/: chatbot_service.py  ml_service.py
tender-bid/babu-4/SecureTender/static/: index.html
tender-bid/babu-4/SecureTender/utils/: test_data_generator.py
